--- a/index.html
+++ b/index.html
@@ -7,14 +7,29 @@
   <meta name="description" content="Psicoterapia humanista-existencial. Espaço de escuta, acolhimento e reflexão. Agende sua sessão com Laura Sathler, CRP 04/30866.">
   <style>
     :root{
-      --bg:#f6efe9; --bg2:#fbf8f5; --card:#ffffff; --text:#2b2b2b; --muted:#6b6b6b;
-      --accent:#79a6a3; --accent-2:#e2d6cc; --radius:18px; --shadow:0 10px 24px rgba(0,0,0,.08);
-      --maxw:1080px; --s4:1.5rem; --s6:3rem; --anchor-offset: 90px;
+      /* Paleta pastel alinhada à sua identidade visual */
+      --bg:#f5efe6;          /* areia claro de fundo */
+      --bg2:#faf6f1;         /* areia ainda mais claro para o gradiente */
+      --card:#ffffff;        /* cartões brancos */
+      --text:#2b2b2b;        /* texto principal */
+      --muted:#6a6a6a;       /* texto secundário */
+      --accent:#7aa6a8;      /* teal suave (botões/links) */
+      --accent-2:#f1c5a6;    /* pêssego suave (hover/realces) */
+      --border:#e9dfd6;      /* borda dos cartões/header */
+      --radius:18px; 
+      --shadow:0 10px 24px rgba(0,0,0,.08);
+      --maxw:1080px; 
+      --s4:1.5rem; 
+      --s6:3rem; 
+      --anchor-offset: 90px;
     }
     *,*::before,*::after{box-sizing:border-box}
     body{
-      margin:0;font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;color:var(--text);
-      background:linear-gradient(180deg,var(--bg),var(--bg2) 40%,var(--bg) 100%);line-height:1.6
+      margin:0;
+      font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;
+      color:var(--text);
+      background:linear-gradient(180deg,var(--bg),var(--bg2) 40%,var(--bg) 100%);
+      line-height:1.6
     }
     h1,h2,h3{line-height:1.2;margin:0 0 .75rem}
     p{margin:0 0 1rem}
@@ -23,26 +38,67 @@
     .container{width:min(var(--maxw),92vw);margin-inline:auto}
 
     /* Cabeçalho */
-    header{position:sticky;top:0;z-index:20;background:rgba(246,239,233,.9);backdrop-filter:saturate(160%) blur(8px);border-bottom:1px solid #eadfd6}
+    header{
+      position:sticky;top:0;z-index:20;
+      background:rgba(245,239,230,.92);
+      backdrop-filter:saturate(160%) blur(8px);
+      border-bottom:1px solid var(--border)
+    }
     .nav{display:flex;align-items:center;justify-content:space-between;gap:.75rem;padding:.6rem 0;flex-wrap:wrap}
     .brand{display:flex;align-items:center;gap:.6rem}
     .brand-logo{height:64px;width:auto}
     nav ul{display:flex;gap:.75rem;list-style:none;margin:0;padding:0;flex-wrap:wrap}
     nav a{padding:.35rem .55rem;border-radius:10px;font-weight:600}
-    nav a:hover{background:var(--accent-2)}
+    nav a:hover{background:color-mix(in srgb, var(--accent-2) 35%, #fff)}
 
     /* Seções gerais */
     section{padding:var(--s6) 0;scroll-margin-top:var(--anchor-offset)}
-    .card{background:var(--card);border:1px solid #eee4da;border-radius:var(--radius);box-shadow:var(--shadow);padding:var(--s4)}
-    .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center}
-    .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:var(--s4);align-items:start}
-    .portrait-circle{width:300px;height:300px;border-radius:50%;object-fit:cover;box-shadow:var(--shadow);display:block;margin:auto}
+    .card{
+      background:var(--card);
+      border:1px solid var(--border);
+      border-radius:var(--radius);
+      box-shadow:var(--shadow);
+      padding:var(--s4)
+    }
 
-    /* Listas limpas */
+    .grid-2{
+      display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center
+    }
+
+    .grid-3{
+      display:grid;
+      grid-template-columns:repeat(3,1fr);
+      gap:var(--s4);
+      align-items:stretch;              /* garante altura igual */
+    }
+    /* Altura igual para as três caixas (Adolescentes, Adultos e Casais) */
+    .grid-3 > .card{
+      height:100%;
+      display:flex; 
+      flex-direction:column;
+    }
+    .grid-3 .mini-cta{margin-top:auto}  /* empurra os botões para o rodapé do card */
+
+    .portrait-circle{
+      width:300px;height:300px;border-radius:50%;object-fit:cover;
+      box-shadow:var(--shadow);display:block;margin:auto
+    }
+
+    /* Listas */
     .list-clean{padding-left:1rem}
     .list-clean li{margin:.5rem 0}
 
-    /* Ícones de contato – tamanho, foco e animação */
+    /* Botões / CTAs */
+    .mini-cta{display:flex;gap:1rem;flex-wrap:wrap;margin-top:.75rem}
+    .btn{
+      display:inline-block;border-radius:12px;padding:.7rem 1rem;font-weight:700;border:1px solid var(--border)
+    }
+    .btn-primary{background:var(--accent);color:#fff;border-color:transparent}
+    .btn-primary:hover{filter:brightness(.96)}
+    .btn-secondary{background:#fff;color:var(--text)}
+    .btn-secondary:hover{background:color-mix(in srgb, var(--accent-2) 30%, #fff)}
+
+    /* Ícones de contato */
     .social{display:flex;justify-content:center;gap:1rem;margin-top:1rem;flex-wrap:wrap}
     .social a{
       display:inline-flex;align-items:center;justify-content:center;
@@ -52,13 +108,7 @@
     .social a:hover{transform:translateY(-1px);filter:brightness(0.98)}
     .social svg{width:52px;height:52px;display:block}
 
-    /* Mini-CTA */
-    .mini-cta{display:flex;gap:1rem;flex-wrap:wrap;margin-top:.75rem}
-    .btn{display:inline-block;border-radius:12px;padding:.7rem 1rem;font-weight:700;border:1px solid #eadfd6}
-    .btn-primary{background:var(--accent);color:#fff;border-color:transparent}
-    .btn-secondary{background:#fff;color:var(--text)}
-
-    footer{padding:2rem 0;border-top:1px solid #eadfd6;color:var(--muted);text-align:center}
+    footer{padding:2rem 0;border-top:1px solid var(--border);color:var(--muted);text-align:center}
 
     @media(max-width:900px){
       .grid-2{grid-template-columns:1fr}
@@ -115,7 +165,7 @@
         <div class="card text">
           <h2>Sobre mim</h2>
           <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866) com mais de 10 anos de experiência clínica, formada pela PUC Minas e com especialização em <strong>Avaliação e Diagnóstico Psicológico</strong>. Minha atuação é baseada na abordagem <strong>humanista-existencial</strong>, valorizando a singularidade de cada pessoa e construindo um espaço de acolhimento, presença e diálogo genuíno.</p>
-          <p>Atendo exclusivamente online, com foco em ansiedade, tristeza persistente, vazio existencial, estresse, burnout, autoestima e questões de relacionamento. O objetivo é oferecer cuidado que respeite seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
+          <p>Atendo online, com foco em ansiedade, tristeza persistente, vazio existencial, estresse, burnout, autoestima e questões de relacionamento. O objetivo é oferecer cuidado que respeite seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
         </div>
       </div>
     </section>
@@ -161,7 +211,7 @@
             </div>
           </div>
 
-          <!-- Casais -->
+          <!-- Casais (altura igual à de Adultos) -->
           <div class="card">
             <h3>Casais</h3>
             <p class="muted">Reencontro, diálogo e projeto comum — fortaleça a conexão.</p>
