--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="card text">
           <h2>Sobre mim</h2>
           <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866) com mais de 10 anos de experiência clínica, formada pela PUC Minas e com especialização em <strong>Avaliação e Diagnóstico Psicológico</strong>. Minha atuação é baseada na abordagem <strong>humanista-existencial</strong>, valorizando a singularidade de cada pessoa e construindo um espaço de acolhimento, presença e diálogo genuíno.</p>
-          <p>Atendo online, com foco em ansiedade, tristeza persistente, vazio existencial, estresse, burnout, autoestima e questões de relacionamento. O objetivo é oferecer cuidado que respeite seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
+          <p>Atendo online e presencial, com foco em ansiedade, tristeza persistente, vazio existencial, estresse, burnout, autoestima e questões de relacionamento. O objetivo é oferecer cuidado que respeite seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
         </div>
       </div>
     </section>
