--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="description" content="Psicoterapia humanista-existencial. Espaço de escuta, acolhimento e reflexão. Agende sua sessão com Laura Sathler, CRP 04/30866.">
   <style>
     :root{
-      /* Paleta pastel alinhada à sua identidade visual */
-      --bg:#f5efe6;          /* areia claro de fundo */
-      --bg2:#faf6f1;         /* areia ainda mais claro para o gradiente */
-      --card:#ffffff;        /* cartões brancos */
-      --text:#2b2b2b;        /* texto principal */
-      --muted:#6a6a6a;       /* texto secundário */
-      --accent:#7aa6a8;      /* teal suave (botões/links) */
-      --accent-2:#f1c5a6;    /* pêssego suave (hover/realces) */
-      --border:#e9dfd6;      /* borda dos cartões/header */
+      /* Paleta pastel alinhada à identidade visual */
+      --bg:#f5efe6;
+      --bg2:#faf6f1;
+      --card:#ffffff;
+      --text:#2b2b2b;
+      --muted:#6a6a6a;
+      --accent:#7aa6a8;   /* teal suave */
+      --accent-2:#f1c5a6; /* pêssego suave */
+      --border:#e9dfd6;
       --radius:18px; 
       --shadow:0 10px 24px rgba(0,0,0,.08);
       --maxw:1080px; 
@@ -64,39 +64,43 @@
     .grid-2{
       display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center
     }
-
     .grid-3{
       display:grid;
       grid-template-columns:repeat(3,1fr);
       gap:var(--s4);
-      align-items:stretch;              /* garante altura igual */
+      align-items:stretch;
     }
-    /* Altura igual para as três caixas (Adolescentes, Adultos e Casais) */
     .grid-3 > .card{
       height:100%;
-      display:flex; 
-      flex-direction:column;
+      display:flex;flex-direction:column;
+      text-align:center; /* centraliza títulos e descrições */
     }
-    .grid-3 .mini-cta{margin-top:auto}  /* empurra os botões para o rodapé do card */
+    .grid-3 > .card ul{
+      margin:0 auto 1rem auto;
+      text-align:left;
+      max-width:90%;
+    }
+    .grid-3 .mini-cta{
+      justify-content:center;
+      margin-top:auto;
+    }
 
     .portrait-circle{
       width:300px;height:300px;border-radius:50%;object-fit:cover;
       box-shadow:var(--shadow);display:block;margin:auto
     }
 
-    /* Listas */
-    .list-clean{padding-left:1rem}
-    .list-clean li{margin:.5rem 0}
-
-    /* Botões / CTAs */
+    /* Botões */
     .mini-cta{display:flex;gap:1rem;flex-wrap:wrap;margin-top:.75rem}
     .btn{
-      display:inline-block;border-radius:12px;padding:.7rem 1rem;font-weight:700;border:1px solid var(--border)
+      display:inline-block;border-radius:12px;padding:.7rem 1rem;
+      font-weight:700;border:1px solid var(--border);
+      min-width:180px;text-align:center
     }
-    .btn-primary{background:var(--accent);color:#fff;border-color:transparent}
+    .btn-primary{
+      background:var(--accent);color:#fff;border-color:transparent
+    }
     .btn-primary:hover{filter:brightness(.96)}
-    .btn-secondary{background:#fff;color:var(--text)}
-    .btn-secondary:hover{background:color-mix(in srgb, var(--accent-2) 30%, #fff)}
 
     /* Ícones de contato */
     .social{display:flex;justify-content:center;gap:1rem;margin-top:1rem;flex-wrap:wrap}
@@ -148,7 +152,6 @@
           <h2>O que é Psicoterapia?</h2>
           <p>A psicoterapia é um espaço seguro de escuta e acolhimento, onde você pode falar livremente sobre o que sente e pensa, sem julgamentos ou expectativas impostas. É um processo que convida ao autoconhecimento, ajudando a reconhecer sua história, compreender as próprias dores, cuidar de si e fortalecer o que traz sentido e vitalidade à vida.</p>
           <p>Esse caminho nem sempre é simples; ele exige presença e coragem para olhar para dentro. Mas também é um espaço de encontro, clareza e afeto, que abre possibilidades para escolhas mais conscientes e formas mais autênticas de viver.</p>
-          <p>Cada conversa é uma oportunidade para se escutar, se compreender e se posicionar no mundo, no seu tempo e do seu jeito.</p>
         </div>
         <div class="media">
           <img class="img-cover" src="Terapeuta-Paciente.png" alt="Terapeuta e paciente em diálogo acolhedor" loading="lazy" decoding="async" style="width:100%;border-radius:18px;box-shadow:var(--shadow)">
@@ -165,7 +168,6 @@
         <div class="card text">
           <h2>Sobre mim</h2>
           <p>Sou <strong>Laura Sathler</strong>, psicóloga (CRP 04/30866) com mais de 10 anos de experiência clínica, formada pela PUC Minas e com especialização em <strong>Avaliação e Diagnóstico Psicológico</strong>. Minha atuação é baseada na abordagem <strong>humanista-existencial</strong>, valorizando a singularidade de cada pessoa e construindo um espaço de acolhimento, presença e diálogo genuíno.</p>
-          <p>Atendo online e presencial, com foco em ansiedade, tristeza persistente, vazio existencial, estresse, burnout, autoestima e questões de relacionamento. O objetivo é oferecer cuidado que respeite seu ritmo e promova clareza, fortalecimento emocional e novas perspectivas.</p>
         </div>
       </div>
     </section>
@@ -173,7 +175,7 @@
     <!-- Especialidades -->
     <section id="especialidades">
       <div class="container">
-        <div class="card" style="margin-bottom: var(--s4)">
+        <div class="card" style="margin-bottom: var(--s4); text-align:center">
           <h2>Especialidades de atendimento</h2>
           <p class="muted">Mais do que diagnósticos, trabalhamos com histórias. Abaixo, situações comuns que podem indicar que é hora de buscar ajuda.</p>
         </div>
@@ -190,7 +192,7 @@
               <li>Conflitos familiares e busca de identidade</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-secondary" href="#contato">Quero conversar sobre meu filho(a)</a>
+              <a class="btn btn-primary" href="#contato">Quero conversar sobre meu filho(a)</a>
             </div>
           </div>
 
@@ -207,11 +209,11 @@
               <li>Desenvolvimento pessoal e busca de propósito</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-secondary" href="#contato">Marcar minha sessão</a>
+              <a class="btn btn-primary" href="#contato">Marcar minha sessão</a>
             </div>
           </div>
 
-          <!-- Casais (altura igual à de Adultos) -->
+          <!-- Casais -->
           <div class="card">
             <h3>Casais</h3>
             <p class="muted">Reencontro, diálogo e projeto comum — fortaleça a conexão.</p>
@@ -223,7 +225,7 @@
               <li>Alinhamento de expectativas e planos em comum</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-secondary" href="#contato">Atendimento para casal</a>
+              <a class="btn btn-primary" href="#contato">Atendimento para casal</a>
             </div>
           </div>
         </div>
@@ -234,7 +236,7 @@
           <p class="muted" style="margin:.5rem 0 1rem">Se você se identificou com algum ponto, um primeiro encontro pode trazer clareza sobre próximos passos.</p>
           <div class="mini-cta" style="justify-content:center">
             <a class="btn btn-primary" href="https://wa.me/5531991593800?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20psicoterapia.">Agendar sessão</a>
-            <a class="btn btn-secondary" href="mailto:Laurasathler@yahoo.com.br">Falar por e-mail</a>
+            <a class="btn btn-primary" href="mailto:Laurasathler@yahoo.com.br">Falar por e-mail</a>
           </div>
         </div>
       </div>
@@ -252,7 +254,6 @@
           <li>Enfrenta conflitos nos relacionamentos ou no trabalho.</li>
           <li>Quer se conhecer melhor e encontrar formas de viver com mais equilíbrio e autenticidade.</li>
         </ul>
-        <p class="muted">A terapia é para qualquer pessoa que deseje cuidar da saúde emocional e desenvolver recursos para lidar com os desafios da vida.</p>
       </div>
     </section>
 
@@ -262,29 +263,27 @@
         <h2>Agende sua sessão</h2>
         <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
 
-        <!-- ÍCONES com visual oficial -->
+        <!-- ÍCONES -->
         <div class="social" aria-label="Canais de contato">
-          <!-- WhatsApp (verde oficial) -->
-          <a href="https://wa.me/5531991593800?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20psicoterapia." target="_blank" rel="noopener" aria-label="WhatsApp">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" role="img" aria-hidden="true" focusable="false">
+          <!-- WhatsApp -->
+          <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
               <circle cx="32" cy="32" r="32" fill="#25D366"/>
-              <path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Zm-1.6-6.3c-.3-.2-1.7-.9-2-1s-.5-.2-.7.2-.8 1-1 1.2-.4.2-.7.1a10.6 10.6 0 0 1-3.2-2 12 12 0 0 1-2.2-2.7c-.2-.4 0-.6.1-.8l.5-.6c.2-.2.3-.5.4-.7s0-.5 0-.7c0-.2-.7-1.7-1-2.3s-.5-.5-.7-.5h-.6a1.1 1.1 0 0 0-.8.4 3.4 3.4 0 0 0-1 2.5 5.9 5.9 0 0 0 1.2 3.1 13.5 13.5 0 0 0 5.2 5 12 12 0 0 0 2.8 1 .1.1 0 0 0 .2 0h.9c.3 0 .6-.2.8-.5s1-1.2 1.1-1.6.1-.7 0-.8-.2-.2-.5-.4Z"/>
+              <path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/>
             </svg>
           </a>
-
-          <!-- E-mail (neutro) -->
+          <!-- E-mail -->
           <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" role="img" aria-hidden="true" focusable="false">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
               <rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/>
               <path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/>
             </svg>
           </a>
-
-          <!-- Instagram (gradiente oficial) -->
-          <a href="https://www.instagram.com/laurasathler_psi?igsh=cDh1cDU4MDdqaHJw&utm_source=qr" target="_blank" rel="noopener" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" role="img" aria-hidden="true" focusable="false">
+          <!-- Instagram -->
+          <a href="https://www.instagram.com/laurasathler_psi" target="_blank" rel="noopener" aria-label="Instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
               <defs>
-                <linearGradient id="ig" x1="0" y1="64" x2="64" y2="0" gradientUnits="userSpaceOnUse">
+                <linearGradient id="ig" x1="0" y1="64" x2="64" y2="0">
                   <stop offset="0" stop-color="#feda75"/>
                   <stop offset=".3" stop-color="#fa7e1e"/>
                   <stop offset=".6" stop-color="#d62976"/>
@@ -298,8 +297,6 @@
             </svg>
           </a>
         </div>
-
-        <p style="margin-top:12px"><strong>Telefone:</strong> +55 31 99159-3800</p>
       </div>
     </section>
   </main>
