--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <!-- Adolescentes -->
           <div class="card">
             <h3>Adolescentes</h3>
-            <p class="muted">Crescer com segurança emocional — escuta para o jovem e para a família.</p>
+            <p class="muted">Crescer com segurança emocional: escuta para o jovem e para a família.</p>
             <ul class="list-clean">
               <li>Autoestima, insegurança e comparação nas redes</li>
               <li>Ansiedade escolar, provas e pressão por desempenho</li>
@@ -192,14 +192,14 @@
               <li>Conflitos familiares e busca de identidade</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-primary" href="#contato">Quero conversar sobre meu filho(a)</a>
+              <a class="btn btn-primary" href="#contato">Quero agendar uma conversa</a>
             </div>
           </div>
 
           <!-- Adultos -->
           <div class="card">
             <h3>Adultos</h3>
-            <p class="muted">Clareza para decidir e respirar melhor — retome a própria direção.</p>
+            <p class="muted">Clareza para decidir e respirar melhor: retome a própria direção.</p>
             <ul class="list-clean">
               <li>Ansiedade, estresse e crises de pânico</li>
               <li>Depressão e sentimentos de vazio</li>
@@ -216,7 +216,7 @@
           <!-- Casais -->
           <div class="card">
             <h3>Casais</h3>
-            <p class="muted">Reencontro, diálogo e projeto comum — fortaleça a conexão.</p>
+            <p class="muted">Reencontro, diálogo e projeto comum:fortaleça a conexão.</p>
             <ul class="list-clean">
               <li>Comunicação e resolução de conflitos</li>
               <li>Reaproximação emocional e afetiva</li>
