--- a/index.html
+++ b/index.html
@@ -120,6 +120,16 @@
       .portrait-circle{width:240px;height:240px}
     }
   </style>
+
+  <!-- Google tag (gtag.js) – cole ANTES de </head> -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGB79CFFK8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    /* Config do seu ID (Google Ads/GA4 via Google tag) */
+    gtag('config', 'G-QGB79CFFK8');
+  </script>
 </head>
 <body>
   <!-- Header -->
@@ -184,7 +194,7 @@
           <!-- Adolescentes -->
           <div class="card">
             <h3>Adolescentes</h3>
-            <p class="muted">Crescer com segurança emocional: escuta para o jovem e para a família.</p>
+            <p class="muted">Crescer com segurança emocional — escuta para o jovem e para a família.</p>
             <ul class="list-clean">
               <li>Autoestima, insegurança e comparação nas redes</li>
               <li>Ansiedade escolar, provas e pressão por desempenho</li>
@@ -192,14 +202,14 @@
               <li>Conflitos familiares e busca de identidade</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-primary" href="#contato">Quero agendar uma conversa</a>
+              <a class="btn btn-primary gtag-out" href="#contato" data-gtag-event="whatsapp_click" data-gtag-label="card_adolescentes">Quero conversar sobre meu filho(a)</a>
             </div>
           </div>
 
           <!-- Adultos -->
           <div class="card">
             <h3>Adultos</h3>
-            <p class="muted">Clareza para decidir e respirar melhor: retome a própria direção.</p>
+            <p class="muted">Clareza para decidir e respirar melhor — retome a própria direção.</p>
             <ul class="list-clean">
               <li>Ansiedade, estresse e crises de pânico</li>
               <li>Depressão e sentimentos de vazio</li>
@@ -209,14 +219,14 @@
               <li>Desenvolvimento pessoal e busca de propósito</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-primary" href="#contato">Marcar minha sessão</a>
+              <a class="btn btn-primary gtag-out" href="#contato" data-gtag-event="whatsapp_click" data-gtag-label="card_adultos">Marcar minha sessão</a>
             </div>
           </div>
 
           <!-- Casais -->
           <div class="card">
             <h3>Casais</h3>
-            <p class="muted">Reencontro, diálogo e projeto comum:fortaleça a conexão.</p>
+            <p class="muted">Reencontro, diálogo e projeto comum — fortaleça a conexão.</p>
             <ul class="list-clean">
               <li>Comunicação e resolução de conflitos</li>
               <li>Reaproximação emocional e afetiva</li>
@@ -225,7 +235,7 @@
               <li>Alinhamento de expectativas e planos em comum</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-primary" href="#contato">Atendimento para casal</a>
+              <a class="btn btn-primary gtag-out" href="#contato" data-gtag-event="whatsapp_click" data-gtag-label="card_casais">Atendimento para casal</a>
             </div>
           </div>
         </div>
@@ -235,8 +245,8 @@
           <strong>Não precisa enfrentar tudo sozinho(a).</strong>
           <p class="muted" style="margin:.5rem 0 1rem">Se você se identificou com algum ponto, um primeiro encontro pode trazer clareza sobre próximos passos.</p>
           <div class="mini-cta" style="justify-content:center">
-            <a class="btn btn-primary" href="https://wa.me/5531991593800?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20psicoterapia.">Agendar sessão</a>
-            <a class="btn btn-primary" href="mailto:Laurasathler@yahoo.com.br">Falar por e-mail</a>
+            <a class="btn btn-primary gtag-out" href="https://wa.me/5531991593800?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20psicoterapia." data-gtag-event="whatsapp_click" data-gtag-label="cta_geral">Agendar sessão</a>
+            <a class="btn btn-primary gtag-out" href="mailto:Laurasathler@yahoo.com.br" data-gtag-event="email_click" data-gtag-label="cta_email">Falar por e-mail</a>
           </div>
         </div>
       </div>
@@ -266,14 +276,14 @@
         <!-- ÍCONES -->
         <div class="social" aria-label="Canais de contato">
           <!-- WhatsApp -->
-          <a href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp">
+          <a class="gtag-out" href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp" data-gtag-event="whatsapp_click" data-gtag-label="footer_whatsapp">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
               <circle cx="32" cy="32" r="32" fill="#25D366"/>
               <path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/>
             </svg>
           </a>
           <!-- E-mail -->
-          <a href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail">
+          <a class="gtag-out" href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail" data-gtag-event="email_click" data-gtag-label="footer_email">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
               <rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/>
               <path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/>
@@ -307,6 +317,25 @@
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    /* --- RASTREAMENTO DE CLIQUES (gtag) --- */
+    (function(){
+      function trackLink(ev){
+        try{
+          var el = ev.currentTarget;
+          var eventName = el.getAttribute('data-gtag-event') || 'click';
+          var eventLabel = el.getAttribute('data-gtag-label') || el.href || el.getAttribute('aria-label') || 'link';
+          if (typeof gtag === 'function'){
+            gtag('event', eventName, {
+              'event_category': 'engagement',
+              'event_label': eventLabel
+            });
+          }
+        }catch(e){}
+      }
+      var outs = document.querySelectorAll('a.gtag-out');
+      outs.forEach(function(a){ a.addEventListener('click', trackLink); });
+    })();
   </script>
 </body>
 </html>
