--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
       <div class="container">
         <div class="card" style="margin-bottom: var(--s4); text-align:center">
           <h2>Especialidades de atendimento</h2>
-          <p class="muted">Mais do que diagnósticos, trabalhamos com histórias. Abaixo, situações comuns que podem indicar que é hora de buscar ajuda.</p>
+          <p class="muted">Mais do que diagnósticos, trabalho com histórias. Abaixo, situações comuns que podem indicar que é hora de buscar ajuda.</p>
         </div>
 
         <div class="grid-3">
           <!-- Adolescentes -->
           <div class="card">
             <h3>Adolescentes</h3>
-            <p class="muted">Crescer com segurança emocional — escuta para o jovem e para a família.</p>
+            <p class="muted">Crescer com segurança emocional: escuta para o jovem e para a família.</p>
             <ul class="list-clean">
               <li>Autoestima, insegurança e comparação nas redes</li>
               <li>Ansiedade escolar, provas e pressão por desempenho</li>
@@ -202,14 +202,14 @@
               <li>Conflitos familiares e busca de identidade</li>
             </ul>
             <div class="mini-cta">
-              <a class="btn btn-primary gtag-out" href="#contato" data-gtag-event="whatsapp_click" data-gtag-label="card_adolescentes">Quero conversar sobre meu filho(a)</a>
+              <a class="btn btn-primary gtag-out" href="#contato" data-gtag-event="whatsapp_click" data-gtag-label="card_adolescentes">Quero agendar uma conversa</a>
             </div>
           </div>
 
           <!-- Adultos -->
           <div class="card">
             <h3>Adultos</h3>
-            <p class="muted">Clareza para decidir e respirar melhor — retome a própria direção.</p>
+            <p class="muted">Clareza para decidir e respirar melhor: retome a própria direção.</p>
             <ul class="list-clean">
               <li>Ansiedade, estresse e crises de pânico</li>
               <li>Depressão e sentimentos de vazio</li>
@@ -226,7 +226,7 @@
           <!-- Casais -->
           <div class="card">
             <h3>Casais</h3>
-            <p class="muted">Reencontro, diálogo e projeto comum — fortaleça a conexão.</p>
+            <p class="muted">Reencontro, diálogo e projeto comum: fortaleça a conexão.</p>
             <ul class="list-clean">
               <li>Comunicação e resolução de conflitos</li>
               <li>Reaproximação emocional e afetiva</li>
