--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <meta name="description" content="Psicoterapia humanista-existencial. Espaço de escuta, acolhimento e reflexão. Agende sua sessão com Laura Sathler, CRP 04/30866.">
   <style>
     :root{
-      /* Paleta pastel alinhada à identidade visual */
       --bg:#f5efe6;
       --bg2:#faf6f1;
       --card:#ffffff;
@@ -21,7 +20,7 @@
       --maxw:1080px; 
       --s4:1.5rem; 
       --s6:3rem; 
-      --anchor-offset: 120px; /* ↑ aumentei por causa do header mais alto */
+      --anchor-offset: 120px;
     }
     *,*::before,*::after{box-sizing:border-box}
     body{
@@ -37,57 +36,66 @@
     .muted{color:var(--muted)}
     .container{width:min(var(--maxw),92vw);margin-inline:auto}
 
-    /* Cabeçalho */
+    /* ========== Header Moderno ========== */
     header{
-      position:sticky;top:0;z-index:20;
+      position:sticky; top:0; z-index:30;
       background:rgba(245,239,230,.92);
       backdrop-filter:saturate(160%) blur(8px);
-      border-bottom:1px solid var(--border)
+      border-bottom:1px solid var(--border);
+      transition: box-shadow .2s ease, background-color .2s ease, padding .2s ease;
     }
     .nav{
-      display:flex;align-items:center;justify-content:space-between;
-      gap:.75rem;padding:.6rem 0;flex-wrap:wrap
+      display:flex; align-items:center; justify-content:space-between;
+      gap:1rem; padding:.8rem 0; transition:padding .2s ease;
     }
-    .brand{display:flex;align-items:center;gap:.75rem}
-    /* >>> LOGO MAIOR <<< */
-    .brand-logo{height:150px;width:auto}
-    nav ul{display:flex;gap:.75rem;list-style:none;margin:0;padding:0;flex-wrap:wrap}
-    nav a{padding:.35rem .55rem;border-radius:10px;font-weight:600}
-    nav a:hover{background:color-mix(in srgb, var(--accent-2) 35%, #fff)}
+    /* Bloco da marca em “linha moderna” */
+    .brand{
+      display:flex; align-items:center; gap:.9rem; min-width:260px;
+    }
+    .brand-logo{
+      height:96px; width:auto; display:block; transition:height .2s ease, transform .2s ease;
+    }
+    .brand-text{display:flex; flex-direction:column; line-height:1.15}
+    .brand-text b{
+      font-weight:800; font-size:clamp(1.05rem, 1.8vw, 1.25rem);
+      letter-spacing:.2px;
+    }
+    .brand-text small{color:var(--muted); font-size:.95rem}
 
-    /* Seções gerais */
-    section{padding:var(--s6) 0;scroll-margin-top:var(--anchor-offset)}
+    /* Menu com sublinhado animado */
+    nav ul{
+      display:flex; gap:1rem; list-style:none; margin:0; padding:0; flex-wrap:wrap;
+    }
+    nav a{
+      position:relative; padding:.45rem .6rem; border-radius:10px; font-weight:600;
+    }
+    nav a::after{
+      content:""; position:absolute; left:.6rem; right:.6rem; bottom:.2rem;
+      height:2px; background:color-mix(in srgb, var(--accent) 65%, #fff);
+      transform:scaleX(0); transform-origin:left; transition:transform .18s ease;
+      border-radius:2px;
+    }
+    nav a:hover::after{transform:scaleX(1)}
+
+    /* Header encolhe ao rolar */
+    header.scrolled{
+      box-shadow:0 8px 24px rgba(0,0,0,.07);
+      background:rgba(245,239,230,.96);
+    }
+    header.scrolled .nav{padding:.55rem 0}
+    header.scrolled .brand-logo{height:76px; transform:translateY(1px)}
+
+    /* ========== Seções gerais ========== */
+    section{padding:var(--s6) 0; scroll-margin-top:var(--anchor-offset)}
     .card{
-      background:var(--card);
-      border:1px solid var(--border);
-      border-radius:var(--radius);
-      box-shadow:var(--shadow);
-      padding:var(--s4)
+      background:var(--card); border:1px solid var(--border);
+      border-radius:var(--radius); box-shadow:var(--shadow); padding:var(--s4)
     }
-
-    .grid-2{
-      display:grid;grid-template-columns:1fr 1fr;gap:var(--s4);align-items:center
-    }
-    .grid-3{
-      display:grid;
-      grid-template-columns:repeat(3,1fr);
-      gap:var(--s4);
-      align-items:stretch;
-    }
-    .grid-3 > .card{
-      height:100%;
-      display:flex;flex-direction:column;
-      text-align:center;
-    }
-    .grid-3 > .card ul{
-      margin:0 auto 1rem auto;
-      text-align:left;
-      max-width:90%;
-    }
-    .grid-3 .mini-cta{
-      justify-content:center;
-      margin-top:auto;
-    }
+    .grid-2{display:grid; grid-template-columns:1fr 1fr; gap:var(--s4); align-items:center}
+    .grid-3{display:grid; grid-template-columns:repeat(3,1fr); gap:var(--s4); align-items:stretch}
+    .grid-3 > .card{height:100%; display:flex; flex-direction:column; text-align:center}
+    .grid-3 > .card ul{margin:0 auto 1rem; text-align:left; max-width:90%}
+    .grid-3 .mini-cta{justify-content:center; margin-top:auto}
 
     .portrait-circle{
       width:300px;height:300px;border-radius:50%;object-fit:cover;
@@ -96,14 +104,8 @@
 
     /* Botões */
     .mini-cta{display:flex;gap:1rem;flex-wrap:wrap;margin-top:.75rem}
-    .btn{
-      display:inline-block;border-radius:12px;padding:.7rem 1rem;
-      font-weight:700;border:1px solid var(--border);
-      min-width:180px;text-align:center
-    }
-    .btn-primary{
-      background:var(--accent);color:#fff;border-color:transparent
-    }
+    .btn{display:inline-block;border-radius:12px;padding:.7rem 1rem;font-weight:700;border:1px solid var(--border);min-width:180px;text-align:center}
+    .btn-primary{background:var(--accent);color:#fff;border-color:transparent}
     .btn-primary:hover{filter:brightness(.96)}
 
     /* Ícones de contato */
@@ -118,16 +120,18 @@
 
     footer{padding:2rem 0;border-top:1px solid var(--border);color:var(--muted);text-align:center}
 
+    /* ====== Responsivo ====== */
     @media(max-width:900px){
       .grid-2{grid-template-columns:1fr}
       .grid-3{grid-template-columns:1fr}
       .portrait-circle{width:240px;height:240px}
-      /* Logo um pouco menor no mobile para caber bem no header */
-      .brand-logo{height:78px}
+      .brand{min-width:auto}
+      .brand-logo{height:84px}
+      header.scrolled .brand-logo{height:70px}
     }
   </style>
 
-  <!-- Google tag (gtag.js) – cole ANTES de </head> -->
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-QGB79CFFK8"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -138,7 +142,7 @@
 </head>
 <body>
   <!-- Header -->
-  <header>
+  <header id="topbar">
     <div class="container nav">
       <div class="brand" aria-label="Identidade do site">
         <img src="Logomarca.png" alt="Logomarca Laura Sathler" class="brand-logo" onerror="this.style.display='none'">
@@ -274,31 +278,19 @@
         <h2>Agende sua sessão</h2>
         <p>Estou à disposição para conversar e iniciar um processo terapêutico com você.</p>
 
-        <!-- ÍCONES -->
         <div class="social" aria-label="Canais de contato">
-          <!-- WhatsApp -->
           <a class="gtag-out" href="https://wa.me/5531991593800" target="_blank" rel="noopener" aria-label="WhatsApp" data-gtag-event="whatsapp_click" data-gtag-label="footer_whatsapp">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-              <circle cx="32" cy="32" r="32" fill="#25D366"/>
-              <path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><circle cx="32" cy="32" r="32" fill="#25D366"/><path fill="#fff" d="M45.6 18.4A16.5 16.5 0 0 0 16.7 43.9l-1.1 6.9 7-1.1A16.5 16.5 0 0 0 45.6 18.4Zm-6 23.8a13.2 13.2 0 0 1-6.5 1.8h-.1a13 13 0 0 1-5.7-1.4l-.4-.2-4.2.7.7-4.1-.3-.4a13 13 0 1 1 16.5 3.6Z"/></svg>
           </a>
-          <!-- E-mail -->
           <a class="gtag-out" href="mailto:Laurasathler@yahoo.com.br" aria-label="E-mail" data-gtag-event="email_click" data-gtag-label="footer_email">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
-              <rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/>
-              <path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><rect x="4" y="12" width="56" height="40" rx="8" fill="#4f7cff"/><path fill="#fff" d="M10 20l22 14L54 20v6L32 40 10 26z"/></svg>
           </a>
-          <!-- Instagram -->
           <a href="https://www.instagram.com/laurasathler_psi" target="_blank" rel="noopener" aria-label="Instagram">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
               <defs>
                 <linearGradient id="ig" x1="0" y1="64" x2="64" y2="0">
-                  <stop offset="0" stop-color="#feda75"/>
-                  <stop offset=".3" stop-color="#fa7e1e"/>
-                  <stop offset=".6" stop-color="#d62976"/>
-                  <stop offset=".85" stop-color="#962fbf"/>
+                  <stop offset="0" stop-color="#feda75"/><stop offset=".3" stop-color="#fa7e1e"/>
+                  <stop offset=".6" stop-color="#d62976"/><stop offset=".85" stop-color="#962fbf"/>
                   <stop offset="1" stop-color="#4f5bd5"/>
                 </linearGradient>
               </defs>
@@ -317,9 +309,18 @@
   </footer>
 
   <script>
+    // Atualiza ano
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    /* --- RASTREAMENTO DE CLIQUES (gtag) --- */
+    // Header dinâmico (sombra + logo menor) e âncora sempre alinhada ao topo real
+    const header = document.getElementById('topbar');
+    function setOffset(){ document.documentElement.style.setProperty('--anchor-offset', header.offsetHeight + 'px'); }
+    function onScroll(){ header.classList.toggle('scrolled', window.scrollY > 10); setOffset(); }
+    window.addEventListener('load', onScroll);
+    window.addEventListener('resize', setOffset);
+    window.addEventListener('scroll', onScroll);
+
+    // Rastreamento simples de cliques externos (gtag)
     (function(){
       function trackLink(ev){
         try{
@@ -327,15 +328,11 @@
           var eventName = el.getAttribute('data-gtag-event') || 'click';
           var eventLabel = el.getAttribute('data-gtag-label') || el.href || el.getAttribute('aria-label') || 'link';
           if (typeof gtag === 'function'){
-            gtag('event', eventName, {
-              'event_category': 'engagement',
-              'event_label': eventLabel
-            });
+            gtag('event', eventName, { 'event_category':'engagement', 'event_label': eventLabel });
           }
         }catch(e){}
       }
-      var outs = document.querySelectorAll('a.gtag-out');
-      outs.forEach(function(a){ a.addEventListener('click', trackLink); });
+      document.querySelectorAll('a.gtag-out').forEach(a=>a.addEventListener('click', trackLink));
     })();
   </script>
 </body>
